welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: ')' expected but '[' found.
	if (talking && (hour==[0;7] | hour==[20;23])){
                              ^parotTrouble:2: error: ')' expected but ';' found.
	if (talking && (hour==[0;7] | hour==[20;23])){
                                ^parotTrouble:2: error: ';' expected but ']' found.
	if (talking && (hour==[0;7] | hour==[20;23])){
                                  ^parotTrouble:2: error: ';' expected but ']' found.
	if (talking && (hour==[0;7] | hour==[20;23])){
                                                  ^