welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
	if (talking && (hour==[0;7] | hour==[20;23])){
		return true
	} else {
		return false
	}
}
